WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157363
Experimental Features don't need an "Experimental" prefix
https://bugs.webkit.org/show_bug.cgi?id=157363
Summary
Experimental Features don't need an "Experimental" prefix
Dean Jackson
Reported
2016-05-04 15:39:26 PDT
Experimental Features don't need an "Experimental" prefix
Attachments
Patch
(6.16 KB, patch)
2016-05-04 15:41 PDT
,
Dean Jackson
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-05-04 15:41:49 PDT
<
rdar://problem/26100630
>
Dean Jackson
Comment 2
2016-05-04 15:41:59 PDT
Created
attachment 278136
[details]
Patch
Anders Carlsson
Comment 3
2016-05-04 15:46:37 PDT
Comment on
attachment 278136
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=278136&action=review
> Source/WebKit2/Shared/WebPreferencesDefinitions.h:296 > + macro(cssGridLayoutEnabled, cssGridLayoutEnabled, Bool, bool, false, "CSS Grid", "CSS Grid Layout Module support") \ > + macro(customElementsEnabled, customElementsEnabled, Bool, bool, false, "Custom Elements", "HTML Custom Elements prototype") \ > + macro(shadowDOMEnabled, shadowDOMEnabled, Bool, bool, false, "Shadow DOM", "HTML Shadow DOM prototype") \ > + macro(webGL2Enabled, webGL2Enabled, Bool, bool, false, "WebGL 2.0", "WebGL 2 prototype") \
Did you intend to make the keys lower case here?
Dean Jackson
Comment 4
2016-05-04 15:57:34 PDT
(In reply to
comment #3
)
> Did you intend to make the keys lower case here?
I did not. Thank you.
Dean Jackson
Comment 5
2016-05-04 16:41:57 PDT
Committed
r200440
: <
http://trac.webkit.org/changeset/200440
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug