Experimental Features don't need an "Experimental" prefix https://bugs.webkit.org/show_bug.cgi?id=157363 <rdar://problem/26100630>

Reviewed by Anders Carlsson.

Since we're not persisting the value of the experimental
features, it's unlikely there will ever be the case
where we move a Preference from experimental to normal
and use a stored value.

* Shared/WebPreferencesDefinitions.h:
* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::overrideBoolPreferenceForTestRunner):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):

Canonical link: https://commits.webkit.org/175473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200440 268f45cc-cd09-0410-ab3c-d52691b4dbfc